# wfloat

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: codegen-model-urls-ci.yml  publish-wfloat-core.yml  python-pypi-publish.yml  python-wheel-ci.yml  react-native-wfloat-ci.yml  wfloat-web-ci.yml
assets/: registry.json
contracts/: README.md
contracts/python/: public_api.py
contracts/typescript/: public-api.ts
examples/: README.md
native/wfloat-core/: CMakeLists.txt  README.md
native/wfloat-core/include/wfloat-core/: wfloat_common.h  wfloat_llm.h  wfloat_stt.h  wfloat_tts.h  wfloat_vad.h
native/wfloat-core/src/: README.md  wfloat_llm.cc  wfloat_stt.cc  wfloat_tts.cc  wfloat_vad.cc
scripts/: codegen_model_urls.py  ensure-emscripten.sh
